Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12381

o2iblnd uses wrong IB interface

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0, Lustre 2.12.3
    • None
    • None
    • master
    • 3
    • 9223372036854775807

      Somehow, o2iblnd in latest master branch (225e7b8) is looking for wrong IB interface.

      # cat /etc/modprobe.d/lustre.conf 
      options lnet networks="o2ib0(ib0)"
      
      # modprobe lustre
      modprobe: ERROR: could not insert 'lustre': Network is down
      

      they are trying to use 'eth0' insetad of ib0. eth0 is notihng configured for o2iblnd though.

      Jun  4 03:10:10 sv160 kernel: LNet: HW NUMA nodes: 1, HW CPU cores: 16, npartitions: 4
      Jun  4 03:10:10 sv160 kernel: alg: No test for adler32 (adler32-zlib)
      Jun  4 03:10:11 sv160 kernel: Lustre: Lustre: Build Version: 2.12.53_117_g20fe8e6_dirty
      Jun  4 03:10:11 sv160 kernel: LNetError: 3057:0:(o2iblnd.c:2892:kiblnd_create_dev()) Can't query IPoIB interface eth0: it's down
      Jun  4 03:10:11 sv160 kernel: LNetError: 3057:0:(o2iblnd.c:2944:kiblnd_create_dev()) LIBCFS: free NULL 'dev' (352 bytes) at /tmp/rpmbuild-lustre-root-KMkogdPP/BUILD/lustre-2.12.53_117_g20fe8e6_dirty/lnet/klnds/o2iblnd/o2iblnd.c:2944
      Jun  4 03:10:12 sv160 kernel: LNetError: 105-4: Error -100 starting up LNI o2ib
      Jun  4 03:10:12 sv160 kernel: LustreError: 3057:0:(events.c:625:ptlrpc_init_portals()) network initialisation failed
      

            simmonsja James A Simmons
            sihara Shuichi Ihara
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: